feat(components): Add visibility toggle for InputPassword (#621)
* cleanup formField a bit

* remove all styling

* style back to default except select

* style the select

* make tests pass

* fix typing issue

* PR fixes from chris

* cleans up some typescript work

* whoops, forgot to add files

* rename css files

* some css cleanup

* handles the icon for prefix and postfix

* some css cleanup

* remove old css

* wip for css

* adds the proper css for now

* adds the affixpadding

* update InputText.mdx back to normal

* breaks affix to its own component

* fix comment typo

* refactored tests for input password, added visibility toggle for passwords

Co-authored-by: eddysims <eddy.s@getjobber.com>

--- a/packages/components/src/InputPassword/InputPassword.mdx
+++ b/packages/components/src/InputPassword/InputPassword.mdx
@@ -50,6 +50,12 @@ character-masking, consider using
   }}
 </Playground>
 
+## With visibility
+
+<Playground>
+  <InputPassword defaultValue="password" placeholder="Password" hasVisibility />
+</Playground>
+
 ## With Error
 
 For more information about available `validations`, see the
