Update countdown title to styling
Co-authored-by: Chris Murray <39704901+chris-at-jobber@users.noreply.github.com>

--- a/packages/components/src/Countdown/Countdown.mdx
+++ b/packages/components/src/Countdown/Countdown.mdx
@@ -66,7 +66,9 @@ import { Countdown } from "@jobber/components/Countdown";
   }}
 </Playground>
 
-## Wrapping a Countdown
+## Styling
+
+Countdown is un-opinionated about its' styling. You can wrap a Countdown in [Heading](/packages-components-src-heading-heading) or [Text](/packages-components-src-text-text) to achieve the desired typographic treatment for your use case.
 
 <Playground>
   {() => {
