Add description in countdown mdx
Co-authored-by: Chris Murray <39704901+chris-at-jobber@users.noreply.github.com>

--- a/packages/components/src/Countdown/Countdown.mdx
+++ b/packages/components/src/Countdown/Countdown.mdx
@@ -19,6 +19,8 @@ import { Button } from "@jobber/components/Button";
 ```ts
 import { Countdown } from "@jobber/components/Countdown";
 ```
+Countdown is used to ensure that a "countdown" to a specified end time is displayed in a consistent format. No text styling is applied to Countdown; it is only concerned with the text content that will be presented.
+
 
 <Playground>
   {() => {
