--- a/packages/components/src/Countdown/Countdown.mdx
+++ b/packages/components/src/Countdown/Countdown.mdx
@@ -37,7 +37,19 @@ Countdown is used to ensure that a "countdown" to a specified end time is displa
 ## Props
 
 <Props of={Countdown} />
+## Design & usage guidelines
 
+Use Countdown when:
+-  there is a need to make a deadline, such as time left to update important details about your account, apparent to the user
+- there is a desire to convey urgency to the user for conversion optimization purposes, such as in a time-bound promotional offer
+
+When choosing which units of time to display via the `granularity` property, consider the time range that the countdown will start at, and the required level of urgency. For example, you may not want to display a 4-day countdown using only seconds; and conversely, a 2-hour countdown would not be conducive to rendering with only days and hours.
+
+## Content guidelines
+
+Countdown only displays numbers and the units of time that it represents. You can choose to show or hide the units themselves, in which case the units will be replaced with the `:` between digits.
+
+Consider the context of the countdown and whether the user will have enough context to interpret appropriately without labeled units when making the decision on whether to show or hide the units.
 ## On Complete
 
 <Playground>
