Add related components
Co-authored-by: Chris Murray <39704901+chris-at-jobber@users.noreply.github.com>

--- a/packages/components/src/Countdown/Countdown.mdx
+++ b/packages/components/src/Countdown/Countdown.mdx
@@ -121,3 +121,9 @@ Countdown is un-opinionated about its' styling. You can wrap a Countdown in [Hea
     );
   }}
 </Playground>
+
+## Related components
+
+- To display a unit of time that has already passed, use [FormatRelativeDateTime](/components/format-relative-date-time)
+- To display time as a static unit, use [FormatTime](/components/time-formatter)
+
