--- a/packages/components/src/Countdown/Countdown.mdx
+++ b/packages/components/src/Countdown/Countdown.mdx
@@ -19,8 +19,10 @@ import { Button } from "@jobber/components/Button";
 ```ts
 import { Countdown } from "@jobber/components/Countdown";
 ```
-Countdown is used to ensure that a "countdown" to a specified end time is displayed in a consistent format. No text styling is applied to Countdown; it is only concerned with the text content that will be presented.
 
+Countdown is used to ensure that a "countdown" to a specified end time is
+displayed in a consistent format. No text styling is applied to Countdown; it is
+only concerned with the text content that will be presented.
 
 <Playground>
   {() => {
@@ -40,16 +42,28 @@ Countdown is used to ensure that a "countdown" to a specified end time is displa
 ## Design & usage guidelines
 
 Use Countdown when:
--  there is a need to make a deadline, such as time left to update important details about your account, apparent to the user
-- there is a desire to convey urgency to the user for conversion optimization purposes, such as in a time-bound promotional offer
 
-When choosing which units of time to display via the `granularity` property, consider the time range that the countdown will start at, and the required level of urgency. For example, you may not want to display a 4-day countdown using only seconds; and conversely, a 2-hour countdown would not be conducive to rendering with only days and hours.
+- There is a need to make a deadline, such as time left to update important
+  details about your account, apparent to the user
+- There is a desire to convey urgency to the user for conversion optimization
+  purposes, such as in a time-bound promotional offer
+
+When choosing which units of time to display via the `granularity` property,
+consider the time range that the countdown will start at, and the required level
+of urgency. For example, you may not want to display a 4-day countdown using
+only seconds; and conversely, a 2-hour countdown would not be conducive to
+rendering with only days and hours.
 
 ## Content guidelines
 
-Countdown only displays numbers and the units of time that it represents. You can choose to show or hide the units themselves, in which case the units will be replaced with the `:` between digits.
+Countdown only displays numbers and the units of time that it represents. You
+can choose to show or hide the units themselves, in which case the units are
+removed and only the `:` between digits remains.
 
-Consider the context of the countdown and whether the user will have enough context to interpret appropriately without labeled units when making the decision on whether to show or hide the units.
+Consider the context of the countdown and whether the user will have enough
+context to interpret appropriately without labeled units when making the
+decision on whether to show or hide the units.
+
 ## On Complete
 
 <Playground>
@@ -82,7 +96,10 @@ Consider the context of the countdown and whether the user will have enough cont
 
 ## Styling
 
-Countdown is un-opinionated about its' styling. You can wrap a Countdown in [Heading](/packages-components-src-heading-heading) or [Text](/packages-components-src-text-text) to achieve the desired typographic treatment for your use case.
+Countdown is un-opinionated about its' styling. You can wrap a Countdown in
+[Heading](/packages-components-src-heading-heading) or
+[Text](/packages-components-src-text-text) to achieve the desired typographic
+treatment for your use case.
 
 <Playground>
   {() => {
@@ -124,6 +141,6 @@ Countdown is un-opinionated about its' styling. You can wrap a Countdown in [Hea
 
 ## Related components
 
-- To display a unit of time that has already passed, use [FormatRelativeDateTime](/components/format-relative-date-time)
+- To display a unit of time that has already passed, use
+  [FormatRelativeDateTime](/components/format-relative-date-time)
 - To display time as a static unit, use [FormatTime](/components/time-formatter)
-
