--- a/packages/components/src/Typography/Typography.mdx
+++ b/packages/components/src/Typography/Typography.mdx
@@ -44,6 +44,17 @@ import { Typography } from "@jobber/components/Typography";
   <Typography fontWeight="black">Shout</Typography>
 </Playground>
 
+## Alignment
+
+Uses start and end instead of left and right to allow for resiliency in both LTR
+and RTL applications.
+
+<Playground>
+  <Typography align="start">Start</Typography>
+  <Typography align="center">Center</Typography>
+  <Typography align="end">End</Typography>
+</Playground>
+
 ## Text case
 
 <Playground>
