--- a/packages/components/src/Text/Text.mdx
+++ b/packages/components/src/Text/Text.mdx
@@ -91,19 +91,25 @@ identify why an element is disabled.
 
 ## Alignment
 
-For text alignment, we use `start` and `end` instead of `left` and `right`. This
-allows us to support
+Use left-aligned text for the the vast majority of use cases, particularly when
+setting paragraphs. You may need to right-align text in cases where a label or
+other small typographic element helps maintain vertical alignment on the right
+side of a layout.
+
+Centered text should be used sparingly, and largely in standalone cases like
+empty states where the content is vertically and horizontally centered.
+
+For text alignment, we use `left` and `right`, but the CSS values use `start`
+and `end` internally. This allows us to support
 [bi-directionality](https://material.io/design/usability/bidirectionality.html#mirroring-layout)
 when needed.
 
 <Playground>
-  <Text align="start">
-    Start aligns text to the left in Latin and other LTR scripts
+  <Text align="left">
+    Use left-aligned text for the the vast majority of use cases
   </Text>
-  <Text align="center">Center is always in... the center</Text>
-  <Text align="end">
-    End aligns text to the right in Latin and other LTR scripts
-  </Text>
+  <Text align="center">Centered text should be used sparingly</Text>
+  <Text align="right">You may need to right-align text in some cases</Text>
 </Playground>
 
 ## maxLines
