--- a/packages/components/src/Typography/Typography.mdx
+++ b/packages/components/src/Typography/Typography.mdx
@@ -46,13 +46,15 @@ import { Typography } from "@jobber/components/Typography";
 
 ## Alignment
 
-Uses start and end instead of left and right to allow for resiliency in both LTR
-and RTL applications.
+For text alignment, we use `left` and `right`, but the CSS values use `start`
+and `end` internally. This allows us to support
+[bi-directionality](https://material.io/design/usability/bidirectionality.html#mirroring-layout)
+when needed.
 
 <Playground>
-  <Typography align="start">Start</Typography>
+  <Typography align="left">Left</Typography>
   <Typography align="center">Center</Typography>
-  <Typography align="end">End</Typography>
+  <Typography align="right">Right</Typography>
 </Playground>
 
 ## Text case
