--- a/packages/components/src/Page/Page.mdx
+++ b/packages/components/src/Page/Page.mdx
@@ -47,7 +47,7 @@ Use a `narrow` Page when the content is optimized for a single column, such as a
 #### Standard
 
 Use a `standard` Page for most "show" state layouts, as it allows for a mix of contents in a 
-mutli-column layout while keeping things constrained so the user does not have to track too far left-to-right
+multi-column layout while keeping things constrained so the user does not have to track too far left-to-right
 as they interact.
 
 #### Fill
