typo in spacing url

--- a/docs/guides/frontent-style.mdx
+++ b/docs/guides/frontent-style.mdx
@@ -264,7 +264,7 @@ Wherever possible use Atlantis `design` tokens.
 
 ### Units
 
-For size units, use the appropriate [Spacing](/spacing) variables. Do not use
+For size units, use the appropriate [Spacing](/space) variables. Do not use
 rems, ems, or hard-coded pixel values, as Atlantis is built using variables to
 allow for consistent re-flow as the browser scales.
 
