--- a/packages/components/src/Tabs/Tabs.mdx
+++ b/packages/components/src/Tabs/Tabs.mdx
@@ -6,8 +6,11 @@ showDirectoryLink: true
 ---
 
 import { Playground, Props } from "docz";
+import { useState } from "react";
 import { ComponentStatus } from "@jobber/docx";
 import { Tabs, Tab } from ".";
+import { Content } from "@jobber/components/Content";
+import { Card } from "@jobber/components/Card";
 
 # Tabs
 
@@ -20,23 +23,34 @@ import { Tabs, Tab } from "@jobber/components/Tabs";
 ```
 
 <Playground>
-  <Tabs>
-    <Tab label="Eggs">
-      🍳 Some eggs are laid by female animals of many different species,
-      including birds, reptiles, amphibians, mammals, and fish, and have been
-      eaten by humans for thousands of years.
-    </Tab>
-    <Tab label="Cheese">
-      🧀 Cheese is a dairy product derived from milk that is produced in a wide
-      range of flavors, textures, and forms by coagulation of the milk protein
-      casein.
-    </Tab>
-    <Tab label="Berries">
-      🍓 A berry is a small, pulpy, and often edible fruit. Typically, berries
-      are juicy, rounded, brightly colored, sweet, sour or tart, and do not have
-      a stone or pit.
-    </Tab>
-  </Tabs>
+  {() => {
+    const [activeIndex, setActiveIndex] = useState(0);
+    return (
+      <>
+        <Tabs onChange={setActiveIndex}>
+          <Tab label="Eggs">
+            🍳 Some eggs are laid by female animals of many different species,
+            including birds, reptiles, amphibians, mammals, and fish, and have
+            been eaten by humans for thousands of years.
+          </Tab>
+          <Tab label="Cheese">
+            🧀 Cheese is a dairy product derived from milk that is produced in a
+            wide range of flavors, textures, and forms by coagulation of the
+            milk protein casein.
+          </Tab>
+          <Tab label="Berries">
+            🍓 A berry is a small, pulpy, and often edible fruit. Typically,
+            berries are juicy, rounded, brightly colored, sweet, sour or tart,
+            and do not have a stone or pit.
+          </Tab>
+        </Tabs>
+        <Card>
+          <Content>Tab {activeIndex} is selected.</Content>
+        </Card>
+      </>
+    );
+}}
+
 </Playground>
 
 ## Props
