very hacky approach to show extra card, need to tweak to work with multiple sizes, probably need to debounce, maybe need to add animations

--- a/packages/components/src/Gallery/Gallery.mdx
+++ b/packages/components/src/Gallery/Gallery.mdx
@@ -23,6 +23,56 @@ import { Gallery } from "@jobber/components/Gallery";
         src: "https://i.imgur.com/AD3MbBi.jpeg",
       },
       {
+        name: "Kitty with Money2",
+        type: "image/jpeg",
+        src: "https://i.imgur.com/AD3MbBi.jpeg",
+      },
+      {
+        name: "Kitty with Money3",
+        type: "image/jpeg",
+        src: "https://i.imgur.com/AD3MbBi.jpeg",
+      },
+      {
+        name: "Kitty with Money4",
+        type: "image/jpeg",
+        src: "https://i.imgur.com/AD3MbBi.jpeg",
+      },
+      {
+        name: "Kitty with Money5",
+        type: "image/jpeg",
+        src: "https://i.imgur.com/AD3MbBi.jpeg",
+      },
+      {
+        name: "Kitty with Money6",
+        type: "image/jpeg",
+        src: "https://i.imgur.com/AD3MbBi.jpeg",
+      },
+      {
+        name: "Kitty with Money7",
+        type: "image/jpeg",
+        src: "https://i.imgur.com/AD3MbBi.jpeg",
+      },
+      {
+        name: "Kitty with Money10",
+        type: "image/jpeg",
+        src: "https://i.imgur.com/AD3MbBi.jpeg",
+      },
+      {
+        name: "What is Jobber?1",
+        type: "video/mp4",
+        src: "https://youtu.be/4f4VzmXmGmQ",
+      },
+      {
+        name: "Kitty with Money8",
+        type: "image/jpeg",
+        src: "https://i.imgur.com/AD3MbBi.jpeg",
+      },
+      {
+        name: "Kitty with Money9",
+        type: "image/jpeg",
+        src: "https://i.imgur.com/AD3MbBi.jpeg",
+      },
+      {
         name: "What is Jobber?",
         type: "video/mp4",
         src: "https://youtu.be/4f4VzmXmGmQ",
