updated react-markdown to latest, updated internal markdown component to new version

--- a/packages/components/src/Markdown/Markdown.mdx
+++ b/packages/components/src/Markdown/Markdown.mdx
@@ -6,12 +6,9 @@ showDirectoryLink: true
 ---
 
 import { Playground, Props } from "docz";
-import { ComponentStatus } from "@jobber/docx";
 import { Markdown } from ".";
 
 # Markdown
-
-<ComponentStatus stage="ready" responsive="yes" accessible="yes" />
 
 Markdown component is a text-to-HTML conversion tool with a twist! Because,
 instead of using semantic HTML tags, it uses our own atlantis component for
@@ -25,7 +22,6 @@ import { Markdown } from "@jobber/components/Markdown";
   <Markdown
     content={`### Bananas
     Bananas are **yellow** on the outside and **white** on the inside. They're also full of nutrients, _but thats just boring stuff_. At this point, I'll just ask you to [google it](https://lmgtfy.com/?q=types+of+bananas).`}
-    externalLink={true}
   />
 </Playground>
 
@@ -33,4 +29,33 @@ import { Markdown } from "@jobber/components/Markdown";
 
 <Props of={Markdown} />
 
----
+## Usage
+
+### Basic
+
+<Playground>
+  <Markdown
+    content={`### Bananas
+    Bananas are **yellow** on the outside and **white** on the inside. They're also full of nutrients, _but thats just boring stuff_. At this point, I'll just ask you to [google it](https://lmgtfy.com/?q=types+of+bananas).`}
+    usage="basic"
+  />
+</Playground>
+
+### Custom Anchor Component
+
+<Playground>
+  <Markdown
+    content={`### Bananas
+    Bananas are **yellow** on the outside and **white** on the inside. They're also full of nutrients, _but thats just boring stuff_. At this point, I'll just ask you to [google it](https://lmgtfy.com/?q=types+of+bananas).`}
+    components={{
+      a: ({ href, children, node, ...props }) => {
+        console.log(node);
+        return (
+          <a href={href} target="_blank" rel="noopener noreferrer" {...props}>
+            {children}
+          </a>
+        );
+      },
+    }}
+  />
+</Playground>
