--- a/packages/components/src/InputValidation/InputValidation.mdx
+++ b/packages/components/src/InputValidation/InputValidation.mdx
@@ -8,6 +8,7 @@ showDirectoryLink: true
 import { Playground, Props } from "docz";
 import { useState } from "react";
 import { ComponentStatus } from "@jobber/docx";
+import { Banner } from "@jobber/components/Banner";
 import { Text } from "@jobber/components/Text";
 import { InputText } from "@jobber/components/InputText";
 import { InputValidation } from ".";
@@ -16,8 +17,16 @@ import { InputValidation } from ".";
 
 <ComponentStatus stage="ready" responsive="yes" accessible="yes" />
 
-`InputValidation` allows you to show the validation messages separate from a
-particular input component.
+<Banner type="warning">
+  90% of validation for inputs will be handled out-of-the-box
+  by the [input component's validation](/components/input-text/#validation-message).
+  Check that you cannot use the built-in validation before using this
+  component.
+<Banner/>
+
+`InputValidation` allows you to show the validation messages in cases where an 
+[input's built-in validation](/components/input-text/#validation-message) is not 
+available, such as in `inline` usage.
 
 For more information about `validations` using any of the `Input` components,
 see the [InputText](/components/input-text/#validation-message) documentation.
