--- a/packages/components/src/InputValidation/InputValidation.mdx
+++ b/packages/components/src/InputValidation/InputValidation.mdx
@@ -18,14 +18,13 @@ import { InputValidation } from ".";
 <ComponentStatus stage="ready" responsive="yes" accessible="yes" />
 
 <Banner type="warning">
-  90% of validation for inputs will be handled out-of-the-box
-  by the [input component's validation](/components/input-text/#validation-message).
-  Check that you cannot use the built-in validation before using this
-  component.
-<Banner/>
+  90% of validation for inputs will be handled out-of-the-box by the [input
+  component's validation](/components/input-text/#validation-message). Check
+  that you cannot use the built-in validation before using this component.
+</Banner>
 
-`InputValidation` allows you to show the validation messages in cases where an 
-[input's built-in validation](/components/input-text/#validation-message) is not 
+`InputValidation` allows you to show the validation messages in cases where an
+[input's built-in validation](/components/input-text/#validation-message) is not
 available, such as in `inline` usage.
 
 For more information about `validations` using any of the `Input` components,
