--- a/packages/components/src/InputValidation/InputValidation.mdx
+++ b/packages/components/src/InputValidation/InputValidation.mdx
@@ -18,9 +18,12 @@ import { InputValidation } from ".";
 <ComponentStatus stage="ready" responsive="yes" accessible="yes" />
 
 <Banner type="warning">
-  90% of validation for inputs will be handled out-of-the-box by the [input
-  component's validation](/components/input-text/#validation-message). Check
-  that you cannot use the built-in validation before using this component.
+  90% of validation for inputs will be handled out-of-the-box by the{" "}
+  <a href="/components/input-text/#validation-message">
+    input component's validation
+  </a>
+  . Check that you cannot use the built-in validation before using this
+  component.
 </Banner>
 
 `InputValidation` allows you to show the validation messages in cases where an
