update related components

--- a/packages/components/src/DatePicker/DatePicker.mdx
+++ b/packages/components/src/DatePicker/DatePicker.mdx
@@ -110,10 +110,17 @@ format "Choose {date} (button)". For example, "Choose December 1st, 2021
 
 If using a custom activator, ensure that the activator is keyboard-operable.
 
-## Notes
+## Related Components
 
-If you are looking to use the `DatePicker` in a `Form`, consider the
-[InputDate](#) component.
+- If you are looking to use the `DatePicker` in a `Form`, consider the
+  [InputDate](#) component.
+- For a time input, use [InputTime](/components/input-time)
+- To present dates that have already been selected in a consistent format, use
+  [FormatDate](/components/date-formatter)
+- To represent past or future dates and times, use
+  [FormatRelativeDateTime](/components/format-relative-date-time)
+
+## Notes
 
 > InputDate is not currently available, but is in development and should be
 > ready for use in the near future.
