--- a/packages/design/src/Colors.mdx
+++ b/packages/design/src/Colors.mdx
@@ -114,8 +114,8 @@ different.
 
 `--color-focus`
 
-Use to indicate that an element has been focused (ideally using the
-`--shadow-focus` property).
+Used by the `--shadow-focus` property to indicate that an element has received
+focus. Avoid using `--color-focus` directly on UI elements.
 
 ### Status
 
