Add blurb on date object

--- a/packages/components/src/DatePicker/DatePicker.mdx
+++ b/packages/components/src/DatePicker/DatePicker.mdx
@@ -21,9 +21,6 @@ While this component can be used in isolation, the intention is that in many
 cases it will supplement an input component to provide the user with a
 multi-mode opportunity to select a date.
 
-The `DataDump` below is returning both a formatted date as a string, and a raw
-`Date` object.
-
 ```ts
 import { DatePicker } from "@jobber/components/DatePicker";
 ```
@@ -39,6 +36,11 @@ import { DatePicker } from "@jobber/components/DatePicker";
     );
   }}
 </Playground>
+
+The `DataDump` above shows the date object that is returned, which includes the
+values of a formatted date as a string, and a raw `Date` object (e.g.,
+attributes can be accessed via `date.raw.getMonth()`). The date object's state
+is managed internally by the component that is wrapped.
 
 ## Props
 
