--- a/packages/design/src/Spacing.mdx
+++ b/packages/design/src/Spacing.mdx
@@ -60,7 +60,7 @@ manner to [Page](/components/page).
 `Large` can also be used to help give a "floating" element some clear separation
 from the edge of its' container, as seen in [Toast](/components/toast).
 
-![illustration of the large space around a Modal's header and content](https://user-images.githubusercontent.com/39704901/143141691-159b1b4c-0b0a-4b61-97d2-15ad06526d69.png)
+![illustration of the large space around a Modal's header and content, a Page's outer padding, and a Toast near the bottom of a viewport](https://user-images.githubusercontent.com/39704901/143152557-8fca3292-dc07-4f9b-a33b-f4d4603c9dd2.png)
 
 ### Larger
 
