refactor(components): BREAKING CHANGE: remove cancel from button and uses of button [JOB-37117] (#651)
* remove cancel from button and uses of button

* update packages to include new hook

* update snaps

* update snaps

* remove cancel from some tests, extra css

* updated icon colors package

--- a/packages/components/src/Button/Button.mdx
+++ b/packages/components/src/Button/Button.mdx
@@ -182,10 +182,10 @@ elements such as a Modal header.
         <Button label="Cancel" type="primary" variation="subtle" />
       </Content>
       <Content>
-        <Button label="Cancel" type="secondary" variation="subtle" />
+        <Button label="Dismiss" type="secondary" variation="subtle" />
       </Content>
       <Content>
-        <Button label="Cancel" type="tertiary" variation="subtle" />
+        <Button label="Maybe Later" type="tertiary" variation="subtle" />
       </Content>
     </Content>
     <div
