--- a/packages/components/src/InputMask/InputMask.mdx
+++ b/packages/components/src/InputMask/InputMask.mdx
@@ -15,7 +15,7 @@ import { InputMask } from "@jobber/components/InputMask";
 ```
 
 <Playground>
-  <InputMask text="Bob" />
+  <InputMask mask="+* (***) ***-****" delimiter="*" />
 </Playground>
 
 <!--
