docs(components): update warning banner content for use case clarity (#781)
* update warning banner content for use case clarity

* update related components

* better words thanks Agnes

Co-authored-by: Agnes Czegus <czegus@gmail.com>

Co-authored-by: Agnes Czegus <czegus@gmail.com>

--- a/packages/components/src/Banner/Banner.mdx
+++ b/packages/components/src/Banner/Banner.mdx
@@ -110,10 +110,12 @@ possibly unknown impact a user’s changes or actions will have. They should not
 begin with "Warning:" and should not be used as a way to block or redirect a
 workflow.
 
+You should use [ConfirmationModal](/components/confirmation-modal) when you need to
+get explicit confirmation from the user before they complete an action that is difficult to reverse.
+
 <Playground>
   <Banner type="warning">
-    Editing this schedule will replace all incomplete visits with the updated
-    information for this job
+    Your subscription will be automatically upgraded in 8 days
   </Banner>
 </Playground>
 
@@ -195,4 +197,6 @@ within a `Banner`. If you require an action, use the `primaryActions` prop. The
 ## Related components
 
 - To provide low priority, temporary feedback on the outcome of a user action,
-  use [Toast](toast) instead.
+  use [Toast](toast) instead
+- Use [ConfirmationModal](/components/confirmation-modal) when you need to
+get explicit confirmation from the user before they complete an action
