remove unused concept of ScheduleEnd

--- a/packages/components/src/RecurringSelect/RecurringSelect.mdx
+++ b/packages/components/src/RecurringSelect/RecurringSelect.mdx
@@ -32,20 +32,14 @@ import { RecurringSelect } from "@jobber/components/RecurringSelect";
     const [schedulerState, setSchedulerState] = useScheduler({
       recurrence: {
         rule: { interval: 1, type: DurationPeriod.Day },
-        ends: {
-          type: "date",
-          date: new Date(),
-          numOfPeriods: 1,
-          durationPeriod: DurationPeriod.Day,
-        },
       },
     });
-    const onChangeSchedule = (partialNextSchedule) =>
+    const onChangeSchedule = (partialNextSchedule) => {
       setSchedulerState({ ...schedulerState, ...partialNextSchedule });
+    }
     return(
       <RecurringSelect
         recurrenceRule={schedulerState.recurrence.rule}
-        recurrenceEnds={schedulerState.recurrence.ends}
         disabled={false}
         onChange={onChangeSchedule}
       />);
