properly import UUID's

--- a/packages/components/src/InputFile/InputFile.mdx
+++ b/packages/components/src/InputFile/InputFile.mdx
@@ -8,7 +8,7 @@ showDirectoryLink: true
 import { Playground, Props } from "docz";
 import { ComponentStatus } from "@jobber/docx";
 import { useState } from "react";
-import uuid from "uuid";
+import { v1 as uuidv1 } from "uuid";
 import { InputFile, updateFiles } from ".";
 import { Content } from "@jobber/components/Content";
 import { Heading } from "@jobber/components/Heading";
