move to Patterns, fix typo

--- a/packages/components/src/RecurringSelect/RecurringSelect.mdx
+++ b/packages/components/src/RecurringSelect/RecurringSelect.mdx
@@ -1,7 +1,7 @@
 ---
 name: RecurringSelect
-menu: Components
-route: /components/recuringselect
+menu: Patterns
+route: /patterns/recurringselect
 showDirectoryLink: true
 ---
 
